--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Advertisements', advertisements_path %></li>
+      </ul>
+    </nav>
+
+    <main>
     <%= yield %>
+    </main>
   </body>
 </html>
