feat: create possibility to add and edit advertisement

--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,8 +1,12 @@
 <h1>Advertisements</h1>
 
 
-<% @ad.each do |advertisement| %>
+<% @advertisement.each do |advertisement| %>
   <h2><%= advertisement.title %></h2>
 
-  <p><%= advertisement.body %></p>
+  <p>
+    <%= advertisement.body %>
+    <br>
+    <%= link_to 'Edit', edit_advertisement_path(advertisement) %>
+  </p>
 <% end %>
