--- a/app/views/advertisements/_form.html.erb
+++ b/app/views/advertisements/_form.html.erb
@@ -1,11 +1,25 @@
+<%= render 'shared/errors', object: @advertisement %>
+
 <%= form_with model: @advertisement do |f| %>
-  <div>
-    <%= f.text_field :title, placeholder: 'Title' %>
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :title %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :title, placeholder: 'Title', class: 'form-control' %>
+    </div>
   </div>
 
-  <div>
-    <%= f.text_area :body, placeholder: 'Appearance' %>
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :body %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_area :body, placeholder: 'Appearance', class: 'form-control' %>
+    </div>
   </div>
 
-  <%= f.submit 'Submit changes' %>
+  <%= f.submit 'Submit changes', class: 'btn btn-primary' %>
 <% end %>
