--- a/app/views/advertisements/show.html.erb
+++ b/app/views/advertisements/show.html.erb
@@ -1,5 +1,8 @@
-<h1><%= @advertisement.title %></h1>
+<h1 class="mb-4"><%= @advertisement.title %></h1>
 
-<p>
+<p class="lead my-3">
   <%= @advertisement.body %>
 </p>
+
+<%= link_to 'Edit', edit_advertisement_path(@advertisement), class: 'btn btn-secondary' %>
+<%= button_to 'Delete', advertisement_path(@advertisement), class: 'btn btn-danger' , method: :delete, data: {confirm: 'Are you sure?'} %>
