feat: add sanitize, faker, trunkate and strip_tags. Some views changes

--- a/app/views/advertisements/edit.html.erb
+++ b/app/views/advertisements/edit.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, 'Edit' %>
+<% currently_at 'Edit advertisement' %>
+
 <h1 class="mb-4">Edit Advertisement</h1>
 
 <%= render 'form' %>
