--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, 'Add advertisement' %>
+<% currently_at 'Add advertisement' %>
+
 <h1 class="mb-4">New advertisement</h1>
 
 <%= render 'form' %>
