--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,11 +1,28 @@
 <%= provide :main_menu do %>
-<header class="p-3 bg-dark text-white">
-  <div class="container"></div>
-  <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-      <li><%= nav_tab 'Home', root_path, class: 'nav-link px-2', current_page: current_page %></li>
-      <li><%= nav_tab 'Advertisements', advertisements_path, class: 'nav-link px-2', current_page: current_page %></li>
-    </ul>
-  </nav>
-</header>
+  <header class="p-3 bg-dark text-white">
+    <div class="container">
+      <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><%= nav_tab 'Home', root_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <li><%= nav_tab 'Advertisements', advertisements_path, class: 'nav-link px-2', current_page: current_page %></li>
+        </ul>
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
+          <% if user_signed_in? %>
+            <%= nav_tab current_user.full_name_or_email, '#',
+              class: 'nav-link px-2',
+              current_page: current_page
+            %>
+            <li>
+              <%= button_to 'Log out', session_path, method: :delete, class: 'nav-link px-2 text-white' %>
+            </li>
+          <% else %>
+            <li><%= nav_tab 'Sign up', new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
+
+            <li><%= nav_tab 'Log In', new_session_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
+  </header>
 <% end %>
