--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -14,6 +14,10 @@
               current_page: current_page
             %>
             <li>
+              <%= link_to 'Edit profile', edit_user_path(current_user) %>
+            </li>
+
+            <li>
               <%= button_to 'Log out', session_path, method: :delete, class: 'nav-link px-2 text-white' %>
             </li>
           <% else %>
