--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -5,22 +5,6 @@
 
 <%= link_to 'Add advertisement', new_advertisement_path, class: 'btn btn-primary btn-lg' %>
 
-<% @advertisements.each do |advertisement| %>
-  <article class="card mt-3">
-    <div class="card-body">
-      <h4><%= advertisement.title %></h4>
-
-      <section class="card-text">
-        <p class="my-2">
-          <%= truncate strip_tags(advertisement.body), length: 160, separator: ' ', omission: '...' %>
-        </p>
-      </section>
-
-      <%= link_to 'Show', advertisement_path(advertisement), class: 'btn btn-primary' %>
-      <%= link_to 'Edit', edit_advertisement_path(advertisement), class: 'btn btn-secondary' %>
-      <%= button_to 'Delete', advertisement_path(advertisement), class: 'btn btn-danger' , method: :delete, data: {confirm: 'Are you sure?'} %>
-    </div>
-  </article>
-<% end %>
+<%= render @advertisements %>
 
 <%= paginate @advertisements %>
