--- a/app/views/advertisements/show.html.erb
+++ b/app/views/advertisements/show.html.erb
@@ -7,9 +7,16 @@
   <%= sanitize @advertisement.body %>
 </div>
 
-<%= link_to 'Edit', edit_advertisement_path(@advertisement), class: 'btn btn-secondary' %>
-<%= button_to 'Delete', advertisement_path(@advertisement), class: 'btn btn-danger' , method: :delete, data: {confirm: 'Are you sure?'} %>
+<div class="mb-3 fw-bold">
+  <%=  @advertisement.user.email%>
+</div>
 
+<div class="border-top py-3">
+  <div class="btn-group">
+    <%= link_to 'Edit', edit_advertisement_path(@advertisement), class: 'btn btn-secondary' %>
+    <%= button_to 'Delete', advertisement_path(@advertisement), class: 'btn btn-danger' , method: :delete, data: {confirm: 'Are you sure?'} %>
+  </div>
+</div>
 <hr class="my-3">
 
 <h2>Write your comment here</h2>
