--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -14,7 +14,7 @@
               current_page: current_page
             %>
             <li>
-              <%= link_to 'Edit profile', edit_user_path(current_user) %>
+              <%= link_to 'Edit profile', edit_user_path(current_user), class: 'nav-link px2 text-white' %>
             </li>
 
             <li>
