feat: add roles and admin page for edit or delete users

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/errors', object: @user %>
+<%= render 'shared/errors', object: user %>
 
 <%= form_with model: @user do |f| %>
   <div class="mb-3 row">
@@ -23,11 +23,11 @@
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
-      <%= f.label :role %>
+      <% f.label :role %>
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :role, class: 'form-control-plaintext form-control-lg', readonly: true %>
+      <%= f.select :role, user_roles, {}, class: 'form-select form-select-lg' %>
     </div>
   </div>
 
@@ -63,5 +63,5 @@
     </div>
   <% end %>
 
-  <%= f.submit (@user.new_record? ? 'Sign up' : "Save changes"), class: 'btn btn-primary' %>
+  <%= f.submit (user.new_record? ? 'Sign up' : "Save changes"), class: 'btn btn-primary' %>
 <% end %>
