--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -2,6 +2,10 @@
   <th scope="row"><%= user.id %></th>
   <td><%= user.full_name %></td>
   <td><%= user.email %></td>
+  <td><%= user.role %></td>
   <td><%= user.created_at %></td>
-  <td><%= user.updated_at %></td>
+  <td>
+    <%= link_to 'Edit information', edit_admin_user_path(user), class: 'btn btn-secondary' %>
+    <%= button_to 'Delete user', admin_user_path(user), method: :delete, class: 'btn btn-danger' %>
+  </td>
 </tr>
