--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,8 +9,9 @@
       <th scope="col">Id</th>
       <th scope="col">Name</th>
       <th scope="col">E-mail</th>
+      <th scope="col">Role</th>
       <th scope="col">Created at</th>
-      <th scope="col">Updated at</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
