--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,6 +33,65 @@
 
   <div class="mb-3 row">
     <div  class="col-sm-2 col-form-label" >
+      <%= f.label :birthday %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.date_select :birthday, { order: [:day, :month, :year], prompt: { day: 'Select day', month: 'Select month', year: 'Select year' }, start_year: Date.today.year - 60, end_year: Date.today.year, class: 'form-control-lg' } %>    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :address %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :address, placeholder: 'Enter your address', class: 'form-control-lg' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :city %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :city, placeholder: 'Enter your city', class: 'form-control-lg' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :state %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :state, placeholder: 'Enter your state', class: 'form-control-lg' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :country %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :country, placeholder: 'Enter your country', class: 'form-control-lg' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
+      <%= f.label :zip %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_field :zip, placeholder: 'Enter your zip code', class: 'form-control-lg' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div  class="col-sm-2 col-form-label" >
       <%= f.label :password %>
     </div>
 
@@ -40,6 +99,8 @@
       <%= f.password_field :password, class: 'form-control-lg' %>
     </div>
   </div>
+
+
 
   <div class="mb-3 row">
     <div  class="col-sm-2 col-form-label" >
