--- a/app/views/advertisements/_form.html.erb
+++ b/app/views/advertisements/_form.html.erb
@@ -23,6 +23,15 @@
 
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
+      <%= f.label :image %>
+    </div>
+    <div class="col-sm-10">
+      <%= f.file_field :image, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
       <%= f.label :tags %>
     </div>
 
