fix: fix `search` button style

--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -12,7 +12,7 @@
                               multiple: true, required: true %>
     </div>
 
-    <%= button_tag 'Search', class: 'btn btn-secondary'%>
+    <%= button_tag 'Search', class: 'btn btn-outline-success'%>
     <% end %>
 </section>
 <% if policy(:advertisement).new? %>
